--- a/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Settings and more/Accessories/AccessoriesStoryboard.storyboard
@@ -1,7 +1,104 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TOh-3S-E5m">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Accessories View Controller-->
+        <scene sceneID="QPM-1O-fXZ">
+            <objects>
+                <viewController id="TOh-3S-E5m" customClass="AccessoriesViewController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OS0-TG-EIW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xFl-ZF-H4B">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7hV-LT-la5" userLabel="testview">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <subviews>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2XT-mO-ZJW">
+                                                <rect key="frame" x="8" y="241" width="359" height="161"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="k9S-3V-Y4n">
+                                                        <rect key="frame" x="0.0" y="28" width="359" height="44"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k9S-3V-Y4n" id="amb-yK-HmB">
+                                                            <rect key="frame" x="0.0" y="0.0" width="359" height="43.5"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                            </tableView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="testlabel2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zxo-vW-JVa">
+                                                <rect key="frame" x="8" y="587" width="359" height="36"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="ZvF-oA-A8O"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2Oy-3z-AMn">
+                                        <rect key="frame" x="0.0" y="430" width="375" height="209"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="60" id="Jyo-XE-HQV">
+                                                <rect key="frame" x="0.0" y="28" width="375" height="60"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jyo-XE-HQV" id="w5v-NL-PDG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="2Oy-3z-AMn" firstAttribute="leading" secondItem="xFl-ZF-H4B" secondAttribute="leading" id="K7e-p8-Lbj"/>
+                                    <constraint firstAttribute="trailing" secondItem="7hV-LT-la5" secondAttribute="trailing" id="SEn-su-3rQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="7hV-LT-la5" secondAttribute="bottom" id="V4x-5i-XE5"/>
+                                    <constraint firstItem="7hV-LT-la5" firstAttribute="leading" secondItem="xFl-ZF-H4B" secondAttribute="leading" id="abm-hJ-VtX"/>
+                                    <constraint firstItem="7hV-LT-la5" firstAttribute="top" secondItem="xFl-ZF-H4B" secondAttribute="top" id="cOW-XF-aAU"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Oy-3z-AMn" secondAttribute="bottom" constant="8" id="pKI-8d-QFs"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Oy-3z-AMn" secondAttribute="trailing" id="xQ3-aM-I9x"/>
+                                </constraints>
+                            </scrollView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="testlabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6rm-CY-41n">
+                                <rect key="frame" x="65" y="0.0" width="245" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7hV-LT-la5" firstAttribute="width" secondItem="OS0-TG-EIW" secondAttribute="width" id="16N-yF-nec"/>
+                            <constraint firstItem="xFl-ZF-H4B" firstAttribute="bottom" secondItem="A2l-Hu-Dxa" secondAttribute="bottom" id="Dfd-oP-mAw"/>
+                            <constraint firstItem="xFl-ZF-H4B" firstAttribute="top" secondItem="A2l-Hu-Dxa" secondAttribute="top" id="akm-qX-FiM"/>
+                            <constraint firstItem="xFl-ZF-H4B" firstAttribute="leading" secondItem="A2l-Hu-Dxa" secondAttribute="leading" id="gaK-3U-vYu"/>
+                            <constraint firstItem="xFl-ZF-H4B" firstAttribute="trailing" secondItem="A2l-Hu-Dxa" secondAttribute="trailing" id="pLD-VD-CLU"/>
+                            <constraint firstItem="7hV-LT-la5" firstAttribute="height" secondItem="OS0-TG-EIW" secondAttribute="height" id="w6x-WJ-o4i"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="A2l-Hu-Dxa"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kR9-oZ-5H8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-415.19999999999999" y="190.25487256371815"/>
+        </scene>
+    </scenes>
 </document>
