You can now save names for timers

--- a/XCode/DewertOkin/DewertOkin/Timer.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Timer.storyboard
@@ -91,6 +91,15 @@
                                     <action selector="doneTimer" destination="94w-4O-QUa" eventType="valueChanged" id="saQ-5H-M3A"/>
                                 </connections>
                             </datePicker>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Timer Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oex-EW-que">
+                                <rect key="frame" x="0.0" y="280" width="375" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="gDR-iO-4Ym"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -98,12 +107,16 @@
                             <constraint firstItem="7aN-So-Cv2" firstAttribute="trailing" secondItem="hoS-sH-BsJ" secondAttribute="trailing" id="E49-Rq-Jat"/>
                             <constraint firstItem="7aN-So-Cv2" firstAttribute="leading" secondItem="hoS-sH-BsJ" secondAttribute="leading" id="JFO-uM-6G0"/>
                             <constraint firstItem="bj9-Kb-brY" firstAttribute="leading" secondItem="hoS-sH-BsJ" secondAttribute="leading" id="Nk9-J3-JIU"/>
+                            <constraint firstItem="Oex-EW-que" firstAttribute="top" secondItem="7aN-So-Cv2" secondAttribute="bottom" id="QKO-oQ-LS3"/>
                             <constraint firstItem="bj9-Kb-brY" firstAttribute="top" secondItem="hoS-sH-BsJ" secondAttribute="top" id="VDD-SY-ZYO"/>
                             <constraint firstItem="7aN-So-Cv2" firstAttribute="top" secondItem="bj9-Kb-brY" secondAttribute="bottom" id="xnM-Hu-0Gu"/>
+                            <constraint firstItem="Oex-EW-que" firstAttribute="trailing" secondItem="hoS-sH-BsJ" secondAttribute="trailing" id="yIZ-lI-VTg"/>
+                            <constraint firstItem="Oex-EW-que" firstAttribute="leading" secondItem="hoS-sH-BsJ" secondAttribute="leading" id="zZD-Lw-CdF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hoS-sH-BsJ"/>
                     </view>
                     <connections>
+                        <outlet property="name" destination="Oex-EW-que" id="aoB-Bv-ie0"/>
                         <outlet property="timePicker" destination="7aN-So-Cv2" id="Vr0-cZ-cen"/>
                     </connections>
                 </viewController>
